--- a/MultiplayerTetris.csproj
+++ b/MultiplayerTetris.csproj
@@ -23,6 +23,7 @@
     <None CopyToOutputDirectory="Always" Include="Content\se\place_block.wav" />
     <None CopyToOutputDirectory="Always" Include="Content\se\clear_row.wav" />
     <None CopyToOutputDirectory="Always" Include="Content\se\fast_scroll.wav" />
+    <None CopyToOutputDirectory="Always" Include="Content\se\perfect.wav" />
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
