Fullscreen Option With Image Background

--- a/MultiplayerTetris.csproj
+++ b/MultiplayerTetris.csproj
@@ -24,6 +24,7 @@
     <None CopyToOutputDirectory="Always" Include="Content\se\clear_row.wav" />
     <None CopyToOutputDirectory="Always" Include="Content\se\fast_scroll.wav" />
     <None CopyToOutputDirectory="Always" Include="Content\se\perfect.wav" />
+    <None CopyToOutputDirectory="Always" Include="Content\img\background.jpg" />
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
