Moved the game into a separate folder from the solution + basic networking
Moved the game into a separate folder to have better splitting between external libraries used (in this case ENetOnline), implemented very basic and hardcoded networking with the willing to extend this for the whole game :^)

--- a/TetrisGame/MultiplayerTetris.csproj
+++ b/TetrisGame/MultiplayerTetris.csproj
@@ -33,8 +33,12 @@
     <TrimmerRootAssembly Include="Microsoft.Xna.Framework.Content.ContentTypeReader" Visible="false" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="ENet-CSharp" Version="2.4.7" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ENetOnline\ENetOnline\ENetOnline.csproj" />
   </ItemGroup>
 </Project>
